# strava-whoop-gcal-sync

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  models.py
src/auth/: basic_auth.py  oauth_manager.py
src/formatters/: strava_formatter.py  whoop_formatter.py
src/routers/: google.py  home.py  strava.py  webhook.py  whoop.py
src/services/: google_calendar.py  strava_backfill.py  strava_service.py  sync_engine.py  whoop_poller.py  whoop_service.py
tests/: conftest.py  test_formatters.py  test_sync_engine.py
